# assessments

01_quiz/: README.md
01_quiz/solution/: bank.go  bank_test.go  main.go
02_project/: README.md
03_lia/part-1/: README.md
03_lia/part-1/solution/cmd/web/: handlers.go  helpers.go  routes.go
03_lia/part-1/solution/ui/html/: base.html
03_lia/part-1/solution/ui/html/pages/: account-create.html  home.html  message-create.html  thread-create.html  thread-view.html
03_lia/part-2/solution/: db.sqlite  go.mod
03_lia/part-2/solution/cmd/web/: handlers.go  helpers.go  main.go  middleware.go  routes.go  templates.go
03_lia/part-2/solution/internal/models/: threads.go  users.go
03_lia/part-2/solution/ui/html/: base.html
03_lia/part-2/solution/ui/html/pages/: account-view.html  thread-create.html  thread-view.html
03_lia/part-2/solution/ui/html/partials/: nav.html  thread.html
03_lia/part-3/: README.md
exams/01/: README.md
exams/01/solution/: main.py  test_grading.py
exams/02/: README.md
exams/02/solution/: main.py  pyproject.toml
exams/02/solution/.github/workflows/: classroom.yml
exams/03/: README.md
lia/: README.md
project/: README.md
